--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
     <!-- script -->
     <script>
       let nouns;
-      const sourceText = `The first of these touches conveyed that the written statement took up the tale at a point after it had, in a manner, begun. The fact to be in possession of was therefore that his old friend, the youngest of several daughters of a poor country parson, had, at the age of twenty, on taking service for the first time in the schoolroom, come up to London, in trepidation, to answer in person an advertisement that had already placed her in brief correspondence with the advertiser.`;
+      const sourceText = `People with an opioid addiction are often in denial about their problem. Recovery requires a team effort
+Ashwini Padhi
+Like many people, my patient was completely unaware of the way that his opioid medication was working
+
+The modern mind is a column where experts discuss mental health issues they are seeing in their work Kane* was 52 years old when he had a serious accident at work, falling from a two-storey building. He was left with multiple fractures, including two fractured ribs, a fractured wrist and pelvis.
+
+After surgery and a lengthy stay in hospital, he returned home but rehabilitation continued. “It took me a good six months to recover from my injuries,” he tells me in his first session. “It was a battle every day just to get out of bed and manage the pain and then I began feeling depressed as I wasn’t able to return to work or do any exercise.”`;
       const wordOffset = 7;
       function generateNewText(text) {
         let splitText = text.split(" ");
