👏🐆 Updated with new word offset number

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 Ashwini Padhi
 Like many people, my patient was completely unaware of the way that his opioid medication was working
 
-The modern mind is a column where experts discuss mental health issues they are seeing in their work Kane* was 52 years old when he had a serious accident at work, falling from a two-storey building. He was left with multiple fractures, including two fractured ribs, a fractured wrist and pelvis.
+The modern mind is a column where experts discuss mental health issues they are seeing in their work Kane was 52 years old when he had a serious accident at work, falling from a two-storey building. He was left with multiple fractures, including two fractured ribs, a fractured wrist and pelvis.
 
 After surgery and a lengthy stay in hospital, he returned home but rehabilitation continued. “It took me a good six months to recover from my injuries,” he tells me in his first session. “It was a battle every day just to get out of bed and manage the pain and then I began feeling depressed as I wasn’t able to return to work or do any exercise.”`;
-      const wordOffset = 7;
+      const wordOffset = 12;
       function generateNewText(text) {
         let splitText = text.split(" ");
         let newText = "";
